all-respondant component added with individual respondant all information

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -8,20 +8,9 @@
           <div class="card-body text-success">
 			<h3 class="text-success mb-3 text-center">About Us</h3>
 			<h4 class="text-info text-center">( हाम्रो बारेमा )</h4>
-			<ol class="text-muted">
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore suscipit expedita tenetur officiis? Officiis, assumenda?</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, sint aliquid eligendi nemo enim dolorem necessitatibus harum! Hic, esse, vero.</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea reiciendis, corporis quibusdam animi odit accusantium culpa, architecto vitae rem, qui repudiandae eligendi nobis nulla nostrum!</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint eaque inventore fugiat officiis non, facilis cupiditate sequi amet, iste fugit quae hic neque accusantium nam rerum nemo odio. Laborum, magni!</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore suscipit expedita tenetur officiis? Officiis, assumenda?</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, sint aliquid eligendi nemo enim dolorem necessitatibus harum! Hic, esse, vero.</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea reiciendis, corporis quibusdam animi odit accusantium culpa, architecto vitae rem, qui repudiandae eligendi nobis nulla nostrum!</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint eaque inventore fugiat officiis non, facilis cupiditate sequi amet, iste fugit quae hic neque accusantium nam rerum nemo odio. Laborum, magni!</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore suscipit expedita tenetur officiis? Officiis, assumenda?</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, sint aliquid eligendi nemo enim dolorem necessitatibus harum! Hic, esse, vero.</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea reiciendis, corporis quibusdam animi odit accusantium culpa, architecto vitae rem, qui repudiandae eligendi nobis nulla nostrum!</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint eaque inventore fugiat officiis non, facilis cupiditate sequi amet, iste fugit quae hic neque accusantium nam rerum nemo odio. Laborum, magni!</li>
-			</ol>
+			<p class="mt-3 text-justify text-muted">
+				दिव्यज्योति बहुमुखी क्याम्पस प्रदेश नम्बर ५, नवलपरासी सुस्ता पश्चिम, बर्दघाट नगरपालिका वडा नम्बर २ चिसापानीमा अवस्थित छ । वि.सं. २०४७ सालमा स्थापित यस सामुदायिक क्याम्पसका उत्पादनहरू हाल विश्वमा छरिएर रहेको अवस्था छ । हाल BBS, BA, BED, MBS, MED का कक्षाहरू सञ्चालन भइरहेको यस क्याम्पसमा आगामी शैक्षिक सत्रबाट BBA पनि सञ्चालन गर्ने तयारी भइरहेको छ । विश्वविद्यालय अनुदान आयोग (University Grants Commission(UGC)) बाट गुणस्तर सुनिश्चितता प्रत्यायन (Quality Assurance Accreditation(QAA)) प्रमाणित यस संस्थाको Employment Cell बाट यस सर्वेक्षण गरिएको हो ।
+			</p>
           </div>
         </div>
       </div>
