--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -27,6 +27,18 @@
 				<div class="mt-6 mb-4">
 					<ul class="nav nav-tabs justify-content-center">
 					  <li class="nav-item">
+					    <button class="btn btn-outline-primary mb-3" routerLink="/admin/admin-panel/all-respondants">See all Respondats</button>
+					  </li>
+					</ul>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="container">
+				<div class="mt-6 mb-4">
+					<ul class="nav nav-tabs justify-content-center">
+					  <li class="nav-item">
 					    <button class="btn btn-outline-info mb-3" (click)="showPieChart()" >Pie Chart</button>
 					  </li>
 					  <li class="nav-item ml-2">
