--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,17 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+<router-outlet (activate)="onActivate($event)"></router-outlet>
 <app-footer></app-footer>
+
+
+<!--
+<p>Hello, Employment cell </p>
+<p>Dibyajyoti Campus</p>
+<p>Follow this link to set your %APP_NAME% password for your %EMAIL% account.</p>
+<p><a href='%LINK%'>%LINK%</a></p>
+<p>If you didn’t ask to reset your password, you can ignore this email.</p>
+<p>Thanks,</p>
+<p>Your %APP_NAME% team</p>
+
+<p>This email and any attachment are confidential and intended only for the use of the individual or entity named above. If you are not the intended recipient, you may not disseminate, distribute or copy any of this email or attachments. If you have received this email in error, please notify us immediately by  telephone and destroy the original message<p>
+<h3>9851145157</h3>
+  -->
