--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -89,9 +89,9 @@
 					</div>
 				</div>
 				<div class="card-footer text-muted text-center">
-					<p>John Citizen</p>
-					<p>Email: johncitizendummy@dummyemail.com</p>
-					<p>mobile: 98XXXXXXXXX</p>
+					<p>Employment cell</p>
+					<p>Email: employmentcell@gmail.com</p>
+					<p>Mobile: 9851145157</p>
 				</div>
 			</div>
           </div>
