--- a/src/app/email/email.component.html
+++ b/src/app/email/email.component.html
@@ -13,7 +13,7 @@
 			</div>
 			<div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
 				<p>Please enter email address. You can submit without entering email address.</p>
-				<p class="text-info text-center">( इमेल एड्रेस नराखेर पनि फर्म सब्मिट गर्न सक्नुहुन्छ । तर इमेल एड्रेस भर्दा राम्रो । )</p>
+				<p class="text-info text-center">( इमेल एड्रेस नराखेर पनि फर्म सब्मिट गर्न सक्नुहुन्छ तर इमेल एड्रेस भर्दा राम्रो । )</p>
 			</div>
 			<form #f="ngForm">
 				<div>
