--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,5 @@
-<nav class="navbar navbar-expand-lg fixed-top py-2 c-nav-bg-color">
-  <a class="navbar-brand" routerLink="/">Employment Cell</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-</nav>
+<a routerLink="/" class="fixed-top c-nav-bg-color pt-2 pl-3">
+    <h5 class="text-success">दिव्यज्योति बहुमुखी क्याम्पस</h5>
+    <p class="font-weight-bold small pl-4 text-primary">Employment Cell</p>
+</a>
 
