--- a/src/app/name/name.component.html
+++ b/src/app/name/name.component.html
@@ -74,7 +74,7 @@
 								[ngModelOptions]="{standalone: true}"
 								(change)="resetName()"
 						    	required>
-						    <label class="custom-control-label" for="group-1">I don't want to provide (नामथर भन्न चाहदैन ।)</label>
+						    <label class="custom-control-label" for="group-1">I don't want to provide <span class="text-info small">(नामथर भन्न चाहदैन)</span></label>
 						    <div class="invalid-feedback">Example invalid feedback text</div>
 						  </div>
 			    	</div>
