--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -9,18 +9,13 @@
 			<h3 class="text-success mb-3 text-center">Privacy Policy</h3>
 			<h4 class="text-info text-center">( गोपनियता निती )</h4>
 			<ol class="text-muted">
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore suscipit expedita tenetur officiis? Officiis, assumenda?</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, sint aliquid eligendi nemo enim dolorem necessitatibus harum! Hic, esse, vero.</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea reiciendis, corporis quibusdam animi odit accusantium culpa, architecto vitae rem, qui repudiandae eligendi nobis nulla nostrum!</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint eaque inventore fugiat officiis non, facilis cupiditate sequi amet, iste fugit quae hic neque accusantium nam rerum nemo odio. Laborum, magni!</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore suscipit expedita tenetur officiis? Officiis, assumenda?</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, sint aliquid eligendi nemo enim dolorem necessitatibus harum! Hic, esse, vero.</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea reiciendis, corporis quibusdam animi odit accusantium culpa, architecto vitae rem, qui repudiandae eligendi nobis nulla nostrum!</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint eaque inventore fugiat officiis non, facilis cupiditate sequi amet, iste fugit quae hic neque accusantium nam rerum nemo odio. Laborum, magni!</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore suscipit expedita tenetur officiis? Officiis, assumenda?</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, sint aliquid eligendi nemo enim dolorem necessitatibus harum! Hic, esse, vero.</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea reiciendis, corporis quibusdam animi odit accusantium culpa, architecto vitae rem, qui repudiandae eligendi nobis nulla nostrum!</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint eaque inventore fugiat officiis non, facilis cupiditate sequi amet, iste fugit quae hic neque accusantium nam rerum nemo odio. Laborum, magni!</li>
+				<li class="mb-1">यस सर्वेक्षणबाट लिइएका जानकारीलाई कडाइका साथ गोपनीय राखिनेछ ।</li>
+				<li class="mb-1">सर्वेक्षणबाट प्राप्त गरिएका व्यक्तिगत जानकारीलाई व्यक्तिगत पहिचान खुल्ने गरी सार्वजनिक रूपमा प्रकाशन, प्रसारण र/वा खुलासा गरिनेछैन ।</li>
+				<li class="mb-1">सर्वेक्षणबाट प्राप्त गरिएका जानकारीलाई व्यक्तिगत पहिचान नखुल्ने गरी नामरहित रूपमा समग्र रूपमा क्याम्पसबाट प्रकाशित स्मारिका, वार्षिक प्रतिवेदन विज्ञापन लगायतमा प्रयोग गर्न सकिने छ ।</li>
+				<li class="mb-1">सर्वेक्षणबाट प्राप्त जानकारीलाई व्यक्तिगत पहिचान खुल्ने गरी खुलासा गर्न आवश्यक परेमा पूर्व स्वीकृति लिएर मात्र गरिनेछ ।</li>
+				<li class="mb-1">कानून वा कानून प्रवर्तन निकायद्वारा खुलासा गर्न आवश्यक परेको खण्डमा पूर्व स्वीकृति बिना खुलासा गर्न सकिने छ ।</li>
+				<li class="mb-1">प्राप्त जानकारीलाई पासवर्ड सुरक्षाद्वारा गोपनीय राखिनेछ ।</li>
+				<li class="mb-1">भुपु विद्यार्थीहरूको व्यक्तिगत व्यक्तित्व तथा क्याम्पसको प्रतिष्ठालाई अभिवृद्धि गर्न क्याम्पसमा बैठकमा आवश्यक भएको समयमा मात्र व्यक्तिगत विवरणको चर्चा परिचर्चा गर्न सकिने छ ।</li>
 			</ol>
           </div>
         </div>
