--- a/src/app/purpose/purpose.component.html
+++ b/src/app/purpose/purpose.component.html
@@ -9,18 +9,12 @@
 			<h3 class="text-success mb-3 text-center">Purpose of this survey</h3>
 			<h4 class="text-info text-center">( यो सर्बेक्षणको उद्धेश्य )</h4>
 			<ol class="text-muted">
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore suscipit expedita tenetur officiis? Officiis, assumenda?</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, sint aliquid eligendi nemo enim dolorem necessitatibus harum! Hic, esse, vero.</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea reiciendis, corporis quibusdam animi odit accusantium culpa, architecto vitae rem, qui repudiandae eligendi nobis nulla nostrum!</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint eaque inventore fugiat officiis non, facilis cupiditate sequi amet, iste fugit quae hic neque accusantium nam rerum nemo odio. Laborum, magni!</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore suscipit expedita tenetur officiis? Officiis, assumenda?</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, sint aliquid eligendi nemo enim dolorem necessitatibus harum! Hic, esse, vero.</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea reiciendis, corporis quibusdam animi odit accusantium culpa, architecto vitae rem, qui repudiandae eligendi nobis nulla nostrum!</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint eaque inventore fugiat officiis non, facilis cupiditate sequi amet, iste fugit quae hic neque accusantium nam rerum nemo odio. Laborum, magni!</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore suscipit expedita tenetur officiis? Officiis, assumenda?</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, sint aliquid eligendi nemo enim dolorem necessitatibus harum! Hic, esse, vero.</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea reiciendis, corporis quibusdam animi odit accusantium culpa, architecto vitae rem, qui repudiandae eligendi nobis nulla nostrum!</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint eaque inventore fugiat officiis non, facilis cupiditate sequi amet, iste fugit quae hic neque accusantium nam rerum nemo odio. Laborum, magni!</li>
+				<li class="mb-1">पूर्व विद्यार्थीको पेशागत अवस्थाको जानकारी लिन ।</li>
+				<li class="mb-1">पूर्व विद्यार्थीको वर्तमान बसोबासको जानकारी प्राप्त गर्न ।</li>
+				<li class="mb-1">विद्यार्थीहरूको वर्तमान आर्थिक अवस्थाको जानकारी प्राप्त गर्न ।</li>
+				<li class="mb-1">उहाँहरूको सम्भावना पत्ता लगाउँदै वृद्धि विकासको लागि सल्लाह तथा सुझाव दिन ।</li>
+				<li class="mb-1">आर्थिक क्रियाकलापहरूमा संलग्न नभएका विद्यार्थीहरूलाई आर्थिक क्रियाकलाप प्रति मार्गदर्शन गराउन ।</li>
+				<li class="mb-1">समग्रमा, क्याम्पसको प्रगति विवरण विश्लेषण गर्न ।</li>
 			</ol>
           </div>
         </div>
