--- a/src/app/status/housewife/housewife-jobwish/housewife-jobwish.component.html
+++ b/src/app/status/housewife/housewife-jobwish/housewife-jobwish.component.html
@@ -1,5 +1,5 @@
 <p class="lead text-info text-center">Would you like to work outside (office)? </p>
-<p class="text-info small text-center mb-1"> के तपाइँ घर बाहिर (अफिसमा) काम गर्न चाहनुहुन्छ ?</p>
+<p class="text-info small text-center mb-1"> के तपाइँ घर बाहिर / अफिसमा काम गर्न चाहनुहुन्छ ?</p>
 <div class="row justify-content-center" *ngIf="isInvalid && f.invalid">  
       <p [ngClass]="{'text-danger small border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
 </div>
