--- a/src/app/terms-conditions/terms-conditions.component.html
+++ b/src/app/terms-conditions/terms-conditions.component.html
@@ -9,18 +9,12 @@
 			<h3 class="text-success mb-3 text-center">Terms & Conditions</h3>
 			<h4 class="text-info text-center">( सर्त तथा अवस्थाहरु )</h4>
 			<ol class="text-muted">
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore suscipit expedita tenetur officiis? Officiis, assumenda?</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, sint aliquid eligendi nemo enim dolorem necessitatibus harum! Hic, esse, vero.</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea reiciendis, corporis quibusdam animi odit accusantium culpa, architecto vitae rem, qui repudiandae eligendi nobis nulla nostrum!</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint eaque inventore fugiat officiis non, facilis cupiditate sequi amet, iste fugit quae hic neque accusantium nam rerum nemo odio. Laborum, magni!</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore suscipit expedita tenetur officiis? Officiis, assumenda?</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, sint aliquid eligendi nemo enim dolorem necessitatibus harum! Hic, esse, vero.</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea reiciendis, corporis quibusdam animi odit accusantium culpa, architecto vitae rem, qui repudiandae eligendi nobis nulla nostrum!</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint eaque inventore fugiat officiis non, facilis cupiditate sequi amet, iste fugit quae hic neque accusantium nam rerum nemo odio. Laborum, magni!</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore suscipit expedita tenetur officiis? Officiis, assumenda?</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, sint aliquid eligendi nemo enim dolorem necessitatibus harum! Hic, esse, vero.</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea reiciendis, corporis quibusdam animi odit accusantium culpa, architecto vitae rem, qui repudiandae eligendi nobis nulla nostrum!</li>
-				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint eaque inventore fugiat officiis non, facilis cupiditate sequi amet, iste fugit quae hic neque accusantium nam rerum nemo odio. Laborum, magni!</li>
+				<li class="mb-1">दिव्यज्योति बहुमुखी क्याम्पसको इम्प्लोयमेन्ट सेलद्वारा सञ्चालित यो सर्वेक्षणमा हजुरलाई हार्दिक स्वागत छ । साथै यसमा सहभागी हुनुभएकोमा धन्यवाद !</li>
+				<li class="mb-1">यो सर्वेक्षण बर्दघाट नगरपालिका-२ चिसापानीमा अवस्थित दिव्यज्योति बहुमुखी क्याम्पसका पूर्व विद्यार्थीहरूका लागी मात्र हो । यदि तपाईं उक्त क्याम्पसको पूर्व विद्यार्थी होइन भने यो सर्वेक्षणमा भाग लिनुहुँदैन ।</li>
+				<li class="mb-1">तपाईंले सर्वेक्षणमा सहभागी हुँदा यस सँग सम्बन्धित वेबसाइट, फेसबुक पेज, मोबाइल तथा अन्य एप्लिकेसनका सर्त तथा अवस्थासँग मञ्जुर भएको मानिने छ ।</li>
+				<li class="mb-1">यदि तपाईंले यसका सर्त तथा अवस्थाहरू नबुझ्नुभएमा, अपूर्ण रूपमा बुझेमा वा मञ्जुर नहुनु भएमा यो वेबसाइट (सर्वेक्षण) प्रयोग गर्नुहुँदैन ।</li>
+				<li class="mb-1">यो सर्वेक्षण र वेबसाइटका सर्त तथा अवस्थाहरू प्रयोगकर्तालाई पूर्व जानकारी नदिइकन पनि फेरबदल/अद्यावधिक हुन सक्नेछन् । त्यसैले समय समयमा अद्यावधिक हेर्दै गर्नुहोला ।</li>
+				<li>तपाईंले उपलब्ध गराउनु गर्नुभएको जानकारी गोपनीय र सुरक्षित राखिनेछ । यदि कुनै कारणबस तपाईंको जानकारी बाहिरिएमा, चुहावट भएमा त्यसबाट हुने हानि-नोक्सानीको लागी यो सर्वेक्षणमा संलग्न दिव्यज्योति बहुमुखी क्याम्पस, इम्प्लोइमेन्ट सेल र यससँग सम्बन्धित कुनै पनि व्यक्ति, संस्था जिम्मेवार हुनेछैनन् ।</li>
 			</ol>
           </div>
         </div>
