--- a/src/app/thank-you/thank-you.component.html
+++ b/src/app/thank-you/thank-you.component.html
@@ -9,16 +9,15 @@
           <div class="card-body text-success">
 			<div class="card-header text-success text-center c-main-bg-color">
 				<h3 class="text-success">Thank you</h3>
-				<h4 class="text-success">(धन्यबाद)</h4>
+				<h4 class="text-success">(धन्यवाद)</h4>
 			</div>
 			<div class="card-body text-center">
 				<p class="card-text">Thank you for your interest and valuable time to participate in this survey. If you want to know more about this survey and Employment Cell of DJMC, please contact us.</p>
-				<a href="#" class="btn btn-outline-success">Go DJMC website</a>
 			</div>
 			<div class="card-footer text-muted text-center">
-				<p>John Citizen</p>
-				<p>Email: johncitizendummy@dummyemail.com</p>
-				<p>mobile: 98XXXXXXXXX</p>
+				<p>Employment cell</p>
+				<p>Email: employmentcell@gmail.com</p>
+				<p>Mobile: 9851145157</p>
 			</div>
           </div>
         </div>
