--- a/src/app/country/country.component.html
+++ b/src/app/country/country.component.html
@@ -7,7 +7,7 @@
         <div class="card c-main-bg-color border-info">
           <div class="card-body pt-1 text-success">
             <p class="lead text-info text-center mb-1">Which country do you live now ?</p>
-            <p class="text-info text-center small mb-1">( कुन देशमा बस्नुहुन्छ ? ? )</p>
+            <p class="text-info text-center small mb-1">( कुन देशमा बस्नुहुन्छ ? )</p>
             <div class="row justify-content-center" *ngIf="isInvalid && f.invalid">  
                   <p [ngClass]="{'text-danger small border border-danger rounded p-2 guide blink': isInvalid}">Please enter country name <span *ngIf="isInvalid">to proceed</span></p>
             </div>
