--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -7,7 +7,7 @@
         <div class="card c-main-bg-color border-info">
           <div class="card-body pt-1 text-success">
             <p class="lead text-info text-center mb-1">What did you study ?</p>
-            <p class="text-info text-center small mb-1">( दिब्यज्योती क्याम्पसमा के अध्ययन गर्नुभयो ? )</p>
+            <p class="text-info text-center small mb-1">( दिव्यज्योति क्याम्पसमा के अध्ययन गर्नुभयो ? )</p>
             <div class="row justify-content-center" *ngIf="isInvalid && f.invalid">  
                   <p [ngClass]="{'text-danger small border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
             </div>
@@ -79,7 +79,7 @@
                                     #level="ngModel"
                                     required
                                     >
-                              <label class="custom-control-label pl-2 ml-3" for="bbs">BBS</label>
+                              <label class="custom-control-label pl-2 ml-3" for="bbs">B.B.S.</label>
                         </div>
                         <div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
                               <input 
@@ -118,7 +118,7 @@
                                     #level="ngModel"
                                     required
                                     >
-                              <label class="custom-control-label pl-2 ml-3" for="mbs">MBS</label>
+                              <label class="custom-control-label pl-2 ml-3" for="mbs">M.B.S.</label>
                         </div>
                         <div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
                               <input 
