--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -35,7 +35,7 @@
 	  	</div>
 	</div>
 -->
-<footer class="mt-4">
+<footer class="mt-4 footer">
 		<div class="row">
 			<div class="col-sm-10 offset-sm-1">
 				<div class="row pt-4 text-center nav">
