--- a/src/app/status/business/business-duration/business-duration.component.html
+++ b/src/app/status/business/business-duration/business-duration.component.html
@@ -1,4 +1,5 @@
 <p class="lead text-info text-center mb-1">How long have you been involved in this business ?</p>
+<p class="text-info text-center small mb-1">( व्यवसायमा संलग्न हुनुभएको कति भयो ?)</p>
 <div class="row justify-content-center" *ngIf="isInvalid && f.invalid">  
       <p [ngClass]="{'text-danger small border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
 </div>
