--- a/src/app/status/business/business-inheritance/business-inheritance.component.html
+++ b/src/app/status/business/business-inheritance/business-inheritance.component.html
@@ -1,4 +1,5 @@
 <p class="lead text-info text-center mb-1">How did you enter in business ?</p>
+<p class="text-info text-center small mb-1">( व्यवसायमा कसरी संलग्न हुनुभयो ?)</p>
 <div class="row justify-content-center" *ngIf="isInvalid && f.invalid">  
       <p [ngClass]="{'text-danger small border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
 </div>
@@ -17,7 +18,7 @@
       			[(ngModel)]="surveyService.businessInheritance"
       			required 
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-1">I involved in family run business</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-1">I involved in family run business <span class="text-info text-center small">(पारिवारिक व्यवसायमा संलग्न)</span></label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -29,7 +30,7 @@
       			[(ngModel)]="surveyService.businessInheritance"
       			required
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-2">I started my own business</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-2">I started my own business <span class="text-info text-center small">(मैले आफ्नै व्यवसाय सुरु गरेको हु)</span></label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -41,7 +42,7 @@
       			[(ngModel)]="surveyService.businessInheritance"
       			required
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-3">I bought this business from others</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-3">I bought this business from others <span class="text-info text-center small">(मैले अरुबाट खरिद गरेको हु)</span></label>
       	</div>
  	</div>
 
