--- a/src/app/status/business/business-investment/business-investment.component.html
+++ b/src/app/status/business/business-investment/business-investment.component.html
@@ -1,4 +1,5 @@
 <p class="lead text-info text-center mb-1">How much did you invest in this business ?</p>
+<p class="text-info text-center small mb-1">( व्यवसायमा कति लगानी गर्नुभएको छ ?)</p>
 <div class="row justify-content-center" *ngIf="isInvalid && f.invalid">  
       <p [ngClass]="{'text-danger small border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
 </div>
