--- a/src/app/status/business/business-type/business-type.component.html
+++ b/src/app/status/business/business-type/business-type.component.html
@@ -1,4 +1,5 @@
 <p class="lead text-info text-center mb-1">What is your business type ?</p>
+<p class="text-info text-center small mb-1">( तपाइको व्यवसायको प्रकृति कस्तो हो ? )</p>
 <div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">  
       <p  [ngClass]="{'text-danger text-center border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="showOther">or enter business type </span> <span *ngIf="isInvalid">to proceed</span></p>
 </div>
@@ -19,7 +20,7 @@
       			required 
       			(change)="hideOther()"
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="production">Production</label>
+      		<label class="custom-control-label pl-2 ml-3" for="production">Production (उप्त्पादनमूलक)</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -33,7 +34,7 @@
       			required
       			(change)="hideOther()"
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="retail">Retail</label>
+      		<label class="custom-control-label pl-2 ml-3" for="retail">Retail (खुद्रा/किराना व्यवसाय)</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -47,7 +48,7 @@
       			required
       			(change)="hideOther()"
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="service">Service</label>
+      		<label class="custom-control-label pl-2 ml-3" for="service">Service (सेवामूलक)</label>
       	</div>
 
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
@@ -60,7 +61,7 @@
       			[checked]="showOther"
       			(change)="otherSelected()"
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="o">Other</label>
+      		<label class="custom-control-label pl-2 ml-3" for="o">Other (अन्य)</label>
       	</div>
 
       	<div class="form-group col-sm-12 col-xs-12 ml-3 mt-4" *ngIf="showOther" >
