--- a/src/app/status/job/job-change/job-change.component.html
+++ b/src/app/status/job/job-change/job-change.component.html
@@ -1,4 +1,5 @@
 <p class="lead text-info text-center mb-1">Did you change job in last 4 years ?</p>
+<p class="text-info text-center small mb-1">( बिगतको चार बर्षमा आफ्नो रोजगारी परिवर्तन गर्नुभयो ? )</p>
 <div class="row justify-content-center" *ngIf="isInvalid && f.invalid">  
       <p [ngClass]="{'text-danger small border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
 </div>
