--- a/src/app/status/job/job-income/job-income.component.html
+++ b/src/app/status/job/job-income/job-income.component.html
@@ -1,4 +1,5 @@
 <p class="lead text-info text-center mb-1">Your monthly income ?</p>
+<p class="text-info text-center small mb-1">( तपाइको मासिक आम्दानी कति हुन्छ ? )</p>
 <div class="row justify-content-center" *ngIf="isInvalid && f.invalid">  
       <p [ngClass]="{'text-danger small border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
 </div>
