--- a/src/app/status/job/job-other-activities/job-other-activities.component.html
+++ b/src/app/status/job/job-other-activities/job-other-activities.component.html
@@ -1,4 +1,5 @@
 <p class="lead text-info text-center mb-1">Involvement other than job ?</p>
+<p class="text-info text-center small mb-1">( नियमित रोजगारी बाहेक अन्य कुन कुरामा संलग्न हुनुहुन्छ ? )</p>
 <div class="row justify-content-center" *ngIf="isInvalid && f.invalid">  
       <p [ngClass]="{'text-danger small border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
 </div>
@@ -17,7 +18,7 @@
       			[(ngModel)]="surveyService.jobOtherActivites"
       			required 
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-1">Social Service</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-1">Social Service <span class="text-info small">(समाजसेवा)</span></label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -29,7 +30,9 @@
       			[(ngModel)]="surveyService.jobOtherActivites"
       			required
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-2">Involved in social organisation. i.e. club</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-2">Involved in social organisation. i.e. club
+                  <span class="text-info small"> (सामाजिक संस्था (क्लब) मा आबद्द)</span>
+                  </label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -41,7 +44,7 @@
       			[(ngModel)]="surveyService.jobOtherActivites"
       			required
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-3">Politics</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-3">Politics <span class="text-info small">(राजनिती)</span></label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -53,7 +56,7 @@
       			[(ngModel)]="surveyService.jobOtherActivites"
       			required
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-4">Part-time job</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-4">Part-time job <span class="text-info small">(पार्टटाइम रोजगारी)</span></label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -65,7 +68,7 @@
       			[(ngModel)]="surveyService.jobOtherActivites"
       			required
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-5">Provide support to family business.</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-5">Provide support to family business. <span class="text-info small">(पारिवारिक व्यवसायमा सहयोग)</span></label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -77,7 +80,7 @@
       			[(ngModel)]="surveyService.jobOtherActivites"
       			required
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-6">Involve in household activities</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-6">Involve in household activities <span class="text-info small">(घरायसी काममा व्यस्त हुन्छु)</span></label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -89,7 +92,7 @@
       			[(ngModel)]="surveyService.jobOtherActivites"
       			required
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-7">Other hobby i.e. music, singing, dancing</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-7">Other hobby i.e. music, singing, dancing <span class="text-info small">(अन्य रुचीका कुराहरु जस्तै संगीत, नाच, गायन आदि)</span></label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
@@ -101,7 +104,7 @@
       			[(ngModel)]="surveyService.jobOtherActivites"
       			required
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-8">Don't want to disclose</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-8">Don't want to disclose <span class="text-info small">(भन्न चाहदैन)</span></label>
       	</div>
       	
  	</div>
