--- a/src/app/status/job/job-satisfaction/job-satisfaction.component.html
+++ b/src/app/status/job/job-satisfaction/job-satisfaction.component.html
@@ -1,4 +1,5 @@
 <p class="lead text-info text-center mb-1">Satisfaction level from your current job?</p>
+<p class="text-info text-center small mb-1">( अहिलेको रोजगारीबाट कति सन्तुष्ट हुनुहुन्छ ? )</p>
 <div class="row justify-content-center" *ngIf="isInvalid && f.invalid">  
       <p [ngClass]="{'text-danger small border border-danger rounded p-2 guide blink': isInvalid}">Please slide left or right <span *ngIf="isInvalid">to proceed</span></p>
 </div>
