--- a/src/app/status/job/job-type/job-type.component.html
+++ b/src/app/status/job/job-type/job-type.component.html
@@ -1,4 +1,5 @@
 <p class="lead text-info text-center mb-1">Job Status ?</p>
+<p class="text-info text-center small mb-1">( तपाईको रोजगारी को प्रकृति कस्तो हो ? )</p>
 <div class="row justify-content-center" *ngIf="isInvalid && f.invalid">  
       <p [ngClass]="{'text-danger small border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
 </div>
@@ -7,19 +8,31 @@
 </div>
 <form #f="ngForm">
 	<div class="row mt-1">
-		<div class="col-xs-12 col-sm-4 custom-control custom-radio">
+		<div class="col-xs-12 col-sm-12 custom-control custom-radio">
       		<input 
       			id="fulltime" 
       			type="radio" 
       			class="custom-control-input" 
-      			value="Fulltime" 
+      			value="Permanent fulltime" 
       			name="jobstatus" 
       			[(ngModel)]="surveyService.jobType"
       			required 
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="fulltime">Full-Time</label>
+      		<label class="custom-control-label pl-2 ml-3" for="fulltime">Permanent Full-Time <span class="text-info">(स्थायी पूर्णकालीन)</span></label>
       	</div>
-      	<div class="col-xs-12 col-sm-4 custom-control custom-radio mt-2">
+            <div class="col-xs-12 col-sm-12 custom-control custom-radio">
+                  <input 
+                        id="tfulltime" 
+                        type="radio" 
+                        class="custom-control-input" 
+                        value="Temporary fulltime" 
+                        name="jobstatus" 
+                        [(ngModel)]="surveyService.jobType"
+                        required 
+                        >
+                  <label class="custom-control-label pl-2 ml-3" for="tfulltime">Temporary Full-Time <span class="text-info">(अस्थायी पूर्णकालीन)</span></label>
+            </div>
+      	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
       			id="parttime" 
       			type="radio" 
@@ -29,20 +42,44 @@
       			[(ngModel)]="surveyService.jobType"
       			required
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="parttime">Part-Time</label>
+      		<label class="custom-control-label pl-2 ml-3" for="parttime">Part-Time <span class="text-info">(आंशिक)</span></label>
       	</div>
-      	<div class="col-xs-12 col-sm-4 custom-control custom-radio mt-2">
-      		<input 
-      			id="causal" 
-      			type="radio" 
-      			class="btn btn-outline-primary custom-control-input" 
-      			value="Causal" 
-      			name="jobstatus" 
-      			[(ngModel)]="surveyService.jobType"
-      			required
-	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="causal">Casual / On-Call</label>
-      	</div>
+            <div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
+                  <input 
+                        id="seasonal" 
+                        type="radio" 
+                        class="btn btn-outline-primary custom-control-input" 
+                        value="Seasonal" 
+                        name="jobstatus" 
+                        [(ngModel)]="surveyService.jobType"
+                        required
+                        >
+                  <label class="custom-control-label pl-2 ml-3" for="seasonal">Seasonal <span class="text-info">(मौषमी)</span></label>
+            </div>
+            <div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
+                  <input 
+                        id="contract" 
+                        type="radio" 
+                        class="btn btn-outline-primary custom-control-input" 
+                        value="Contract" 
+                        name="jobstatus" 
+                        [(ngModel)]="surveyService.jobType"
+                        required
+                        >
+                  <label class="custom-control-label pl-2 ml-3" for="contract">Contract <span class="text-info">(करार)</span></label>
+            </div>
+            <div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
+                  <input 
+                        id="causal" 
+                        type="radio" 
+                        class="btn btn-outline-primary custom-control-input" 
+                        value="Causal" 
+                        name="jobstatus" 
+                        [(ngModel)]="surveyService.jobType"
+                        required
+                        >
+                  <label class="custom-control-label pl-2 ml-3" for="causal">Casual / On-Call <span class="text-info">( अनौपचारिक वा आकस्मिक)</span></label>
+            </div>
  	</div>
 </form>
 
