--- a/src/bootstrap/bootstrap.scss
+++ b/src/bootstrap/bootstrap.scss
@@ -11,15 +11,15 @@
 @import "root";
 @import "reboot";
 @import "type";
-//@import "images";
+@import "images";
 @import "code";
 @import "grid";
-//@import "tables";
+@import "tables";
 @import "forms";
 @import "buttons";
 @import "transitions";
-//@import "dropdown";
-//@import "button-group";
+@import "dropdown";
+@import "button-group";
 @import "input-group";
 @import "custom-forms";
 @import "nav";
@@ -38,4 +38,4 @@
 //@import "popover";
 //@import "carousel";
 @import "utilities";
-//@import "print";
+@import "print";
