--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
-<a routerLink="/" class="fixed-top c-nav-bg-color pt-2 pl-3">
+<div routerLink="/" class="fixed-top c-nav-bg-color pt-2 pl-3 b-name">
     <h5 class="text-success">दिव्यज्योति बहुमुखी क्याम्पस</h5>
     <p class="font-weight-bold small pl-4 text-primary">Employment Cell</p>
-</a>
+</div>
 
